@@ -41,6 +41,14 @@ Revision history for Perl extension Net::SSLeay.
 	  P_X509_CRL_add_revoked_serial_hex(). Closes GH-397. Reported
 	  by Marc Reisner.
 	- Support stable releases of LibreSSL 3.5 and 3.6.
+	- Update callback set by SSL_set_session_secret_cb to adjust
+	  master secret's length. This is needed with OpenSSL 1.1.1
+	  and later that provide buffer that is now longer than 48
+	  octets. Fix Net::SSLeay::get_keyblock_size() size
+	  calculation with AEAD ciphers. These functions were
+	  originally added to OpenSSL and Net::SSLeay for
+	  EAP-FAST. These changes allow EAP-FAST to work with AEAD
+	  ciphers and with OpenSSL versions 1.1.1 and later.
 
 1.93_01 2022-03-20
 	- LibreSSL 3.5.0 has removed access to internal data
